@@ -8,6 +8,7 @@ Release 0.9.2
 - make admin language tool mark duplicate mappings and add inline warnings if
   duplicate keys with different values exist; b:#1993788
 - add support for blocking accounts
+- added new events to track account creation and welcome email
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
